security-authorization-http-traffic/booking-deployment-with-service-account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: booking-service
    version: v1
  name: booking-service-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: booking-service
        version: v1
    spec:
      serviceAccountName: booking-service-account
      containers:
        - image: kubeteam/booking-service:v1
          name: booking-service
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8084
  selector:
    app: booking-service
